--- a/mod1_sol/index.html
+++ b/mod1_sol/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="angular.js"></script>
+    <script src="angular.min.js"></script>
     <script src="app.js"></script>
 
     <title>Lunch Checker</title>
